--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "autoprefixer": "^10.3.7",
     "babel-plugin-styled-components": "^1.12.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.8.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-postcss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-sharp": "^2.11.2",
     "gatsby-plugin-sitemap": "^2.9.0",
@@ -28,9 +30,11 @@
     "gatsby-source-filesystem": "^2.8.1",
     "gatsby-source-shopify": "^3.7.1",
     "gatsby-transformer-sharp": "^2.9.0",
+    "postcss": "^8.3.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "tailwindcss": "^2.2.17"
   }
 }
